# HN3Ttk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api_overview.md  benchmarks_guide.md  building_networks.md  core_concepts.md  index.md  parameter_reference.md  quickstart.md  results_and_exports.md  solvers_guide.md  troubleshooting.md
examples/: 01_single_pipe_step_by_step.py  02_parallel_pipes_step_by_step.py  03_three_reservoirs_step_by_step.py  04_compare_solvers.py  05_export_results.py  06_medium_generic_network.py  README.md
examples/plots/: 01_plot_darcy_local_power_law_regimes.py  02_plot_tabulated_curve_resolution_methods.py  03_plot_all_connection_models.py  README.md
hn3ttk/: README.md  __init__.py  api.py  type_defs.py
hn3ttk/benchmarks/: README.md  __init__.py  academic_sources.md  simple_networks.py  solver_comparison.py  validation_cases.py
hn3ttk/connections/: README.md  __init__.py  base.py  custom_factor_polynomial.py  factory.py  linear_interpolation.py  pipe_darcy.py  pipe_fixed_power_law.py  pipe_local_power_law.py  polynomial_regression.py  spline_interpolation.py  spline_secant_extrapolation.py  spline_tangent_extrapolation.py
hn3ttk/nodes/: README.md  __init__.py  base.py  configurable.py  demand.py  factory.py  fixed_head.py  (+3 more)
tests/: test_benchmarks_basic.py  test_connections_basic.py  test_editor_hints_basic.py  test_nodes_basic.py  test_package_metadata.py  test_results_basic.py  test_scipy_solvers_basic.py  test_solvers_basic.py  test_system_basic.py
(+21 files in other folders)
