[project]
name = "hn3ttk"
version = "0.0.1"
description = "Hydraulic Network Toolkit"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "scipy",
    "matplotlib"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["hn3ttk*"]
